<?xml version="1.0"?>
<package format="1">
    <name>force_visualization</name>
    <version>0.0.0</version>
    <description>The force_visualization package</description>

    <maintainer email="savchenkmisha@gmail.com">Misha Savchenko</maintainer>

    <license>GPLv3</license>

    <author email="savchenkmisha@gmail.com">Misha Savchenko</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>qtbase5-dev</build_depend>
    <build_depend>rviz</build_depend>

    <run_depend>libqt5-core</run_depend>
    <run_depend>libqt5-gui</run_depend>
    <run_depend>libqt5-widgets</run_depend>
    <run_depend>rviz</run_depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
